--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -32,10 +32,10 @@ spec:
     enabled: false
   resources:
     limits:
-      cpu: 750m
-      memory: 1Gi
+      cpu: 200m
+      memory: 512Mi
     requests:
-      cpu: 500m
+      cpu: 50m
       memory: 512Mi
   accessPolicy:
     inbound:
