--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -33,7 +33,7 @@ spec:
   resources:
     limits:
       cpu: 200m
-      memory: 512Mi
+      memory: 1Gi
     requests:
       cpu: 50m
       memory: 512Mi
