--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -9,7 +9,7 @@ spec:
   image: {{ image }}
   port: 8080
   replicas:
-    min: 2
+    min: 3
     max: 5
     cpuThresholdPercentage: 70
   liveness:
@@ -32,10 +32,10 @@ spec:
     enabled: false
   resources:
     limits:
-      cpu: 200m
-      memory: 512Mi
+      cpu: 750m
+      memory: 1Gi
     requests:
-      cpu: 50m
+      cpu: 500m
       memory: 512Mi
   accessPolicy:
     inbound:
