--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,9 @@
 name: Deploy to dev and prod
-on:
-  push:
-    branches:
-      - main
+on: push
 
 jobs:
-  build-push-deploy:
-    permissions:
-      contents: "read"
-      id-token: "write"
-    name: Checkout code and create docker tag
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: docker-build-push
-        uses: nais/docker-build-push@v0
-        id: docker-build-push
-        with:
-          team: teamsykmelding
-          identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
-          project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
-      - name: deploy to dev-gcp
-        uses: nais/deploy/actions/deploy@master
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY_TEAMSYKMELDING }}
-          CLUSTER: dev-gcp
-          RESOURCE: naiserator-dev.yaml
-          VAR: image=${{ steps.docker-build-push.outputs.image }}
-      - name: deploy to prod-gcp
-        uses: nais/deploy/actions/deploy@master
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY_TEAMSYKMELDING }}
-          CLUSTER: prod-gcp
-          RESOURCE: naiserator-prod.yaml
-          VAR: image=${{ steps.docker-build-push.outputs.image }}
+  jar-app:
+    uses: navikt/teamsykmelding-github-actions-workflows/.github/workflows/jar-app.yaml@main
+    secrets: inherit
+    with:
+      app: pale-2-pdfgen
