--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -32,10 +32,10 @@ spec:
     enabled: false
   resources:
     limits:
-      memory: 1000Mi
+      memory: 1Gi
     requests:
       cpu: 200m
-      memory: 400Mi
+      memory: 512Mi
   accessPolicy:
     inbound:
       rules:
