--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -35,7 +35,7 @@ spec:
       memory: 2Gi
     requests:
       cpu: 300m
-      memory: 756Mi
+      memory: 1Gi
   accessPolicy:
     inbound:
       rules:
