Allow access from isbehandlerdialog

--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -42,3 +42,6 @@ spec:
         - application: pale-2-sak
           namespace: teamsykmelding
           cluster: prod-gcp
+        - application: isbehandlerdialog
+          namespace: teamsykefravr
+          cluster: prod-gcp
