--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -42,3 +42,6 @@ spec:
         - application: pale-2-sak
           namespace: teamsykmelding
           cluster: dev-gcp
+        - application: isbehandlerdialog
+          namespace: teamsykefravr
+          cluster: dev-gcp
