--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -28,6 +28,10 @@ spec:
   prometheus:
     enabled: true
     path: /internal/prometheus
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   resources:
     limits:
       memory: 2048Mi
