--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -38,10 +38,10 @@ spec:
         - id: elastic
   resources:
     limits:
-      memory: 5Gi
+      memory: 3Gi
     requests:
       cpu: 500m
-      memory: 3Gi
+      memory: 1536Mi
   accessPolicy:
     inbound:
       rules:
