chore: add in permissions packages: write

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build-push-deploy:
     permissions:
+      packages: "write"
       contents: "read"
       id-token: "write"
     name: Checkout code and create docker tag
