--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -11,7 +11,9 @@ spec:
   replicas:
     min: 2
     max: 8
-    cpuThresholdPercentage: 95
+    scalingStrategy:
+      cpu:
+        threshold: 90
   liveness:
     path: /internal/is_alive
     timeout: 1
